# instachef

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.downloader  README.md  Taskfile.yml  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gemini_client.py  instagram_client.py  logger.py  main.py  nginx.conf  pyproject.toml  receipe_extractor.py  recipe_processor.py  skills-lock.json  telegram_main.py
api/: .env.example  README.md  Taskfile.yml  logger.py  main.py  openapi.json  pyproject.toml
api/connectors/: __init__.py  api.py  cli.py  telegram.py
api/core/: ports.py
api/domain/: exceptions.py  recipe.py  recipe_record.py
api/downloaders/: main.py
api/infrastructure/: config.py  container.py
api/providers/: ai_recipe_extractor.py  http_reel_downloader.py  local_json_recipe_repository.py  mongodb_recipe_repository.py  reels_downloader.py  supabase_recipe_repository.py
app/: .gitignore  PWA_SETUP.md  app.json  eslint.config.js  index.html  metro.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/public/: manifest.json
connectors/: api.py  cli.py  rest.py  telegram.py
core/: ports.py  process_reel.py
domain/: exceptions.py  recipe.py  recipe_record.py  recipe_source.py  reel.py
downloaders/: __init__.py
frontend/: package-lock.json  package.json
infrastructure/: config.py  container.py
providers/: ai_recipe_extractor.py  local_json_recipe_repository.py  mongodb_recipe_repository.py  reels_downloader.py  supabase_recipe_repository.py
(+27 files in other folders)
