[project]
name = "instachef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "fastapi>=0.115.2",
    "instaloader>=4.15.1",
    "pymongo>=4.13.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.0.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.5.3",
    "uvicorn>=0.30.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "connectors",
    "core",
    "domain",
    "infrastructure",
    "providers",
]
